apps/trillium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trillium
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: trillium
    app.kubernetes.io/part-of: trillium
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: trillium
      app.kubernetes.io/part-of: trillium
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: trillium
        app.kubernetes.io/part-of: trillium
    spec:
      nodeSelector:
        kubernetes.io/hostname: pj
      containers:
        - name: trillium
          image: triliumnext/notes:develop
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /home/node/trilium-data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: trillium-data
