apps/trillium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trillium
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: trillium
    app.kubernetes.io/part-of: trillium
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: trillium
    app.kubernetes.io/part-of: trillium
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
