apps/trillium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trillium
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: trillium
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: trillium.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trillium
                port:
                  number: 8080
    - host: trillium.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trillium
                port:
                  number: 8080
